Rewrite flaky test and optimize fix.

There's no need to wait for the ack from the renderer before
invalidating the URL in the address bar.  This cleans up an old
delegate method and avoids the need to wait for the ack in the test.

Also, the test can be implemented in content/ rather than chrome/.

BUG=739773
TEST=No behavior change, new test stays green.

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I66450965b5a8ac517211194590f47044d6ab50d3